# n-body-simulation

./: Cargo.toml  Untitled.ipynb  main.py  pyproject.toml
src/: lib.rs
