[package]
name = "star_simulation_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "star_simulation_rust"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.22.1"
pyo3 = "0.22.1"
rayon = "1.10.0"
itertools = "0.13.0"
